tests/dataset/tpc-ds/compiler/cpp/q12.error
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:73:8: error: redefinition of ‘struct WebSale’
   73 | struct WebSale {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:56:8: note: previous definition of ‘struct WebSale’
   56 | struct WebSale {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:78:8: error: redefinition of ‘struct Item’
   78 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:61:8: note: previous definition of ‘struct Item’
   61 | struct Item {
      |        ^~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:86:8: error: redefinition of ‘struct DateDim’
   86 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:69:8: note: previous definition of ‘struct DateDim’
   69 | struct DateDim {
      |        ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:91:12: error: ‘i’ was not declared in this scope
   91 |   decltype(i.i_item_id) id;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:91:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:92:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   92 |   decltype(i.i_item_desc) desc;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:92:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   92 |   decltype(i.i_item_desc) desc;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:93:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   93 |   decltype(i.i_category) cat;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:93:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   93 |   decltype(i.i_category) cat;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:94:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   94 |   decltype(i.i_class) class;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:94:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   94 |   decltype(i.i_class) class;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:94:28: error: expected identifier before ‘;’ token
   94 |   decltype(i.i_class) class;
      |                            ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:94:3: error: multiple types in one declaration
   94 |   decltype(i.i_class) class;
      |   ^~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:95:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   95 |   decltype(i.i_current_price) price;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:95:12: error: ‘i’ was not declared in this scope; did you mean ‘id’?
   95 |   decltype(i.i_current_price) price;
      |            ^
      |            id
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:98:12: error: ‘ws’ was not declared in this scope; did you mean ‘std::ws’?
   98 |   decltype(ws) ws;
      |            ^~
      |            std::ws
In file included from /usr/include/c++/13/istream:1106,
                 from /usr/include/c++/13/iostream:42,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:3:
/usr/include/c++/13/bits/istream.tcc:1070:5: note: ‘std::ws’ declared here
 1070 |     ws(basic_istream<_CharT, _Traits>& __in)
      |     ^~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:98:12: error: ‘ws’ was not declared in this scope; did you mean ‘std::ws’?
   98 |   decltype(ws) ws;
      |            ^~
      |            std::ws
/usr/include/c++/13/bits/istream.tcc:1070:5: note: ‘std::ws’ declared here
 1070 |     ws(basic_istream<_CharT, _Traits>& __in)
      |     ^~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:99:12: error: ‘i’ was not declared in this scope
   99 |   decltype(i) i;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:99:12: error: ‘i’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:100:12: error: ‘d’ was not declared in this scope
  100 |   decltype(d) d;
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:100:12: error: ‘d’ was not declared in this scope
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:110:42: error: expected unqualified-id before ‘class’
  110 |   decltype(std::declval<__struct6>().key.class) i_class;
      |                                          ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:115:38: error: ‘struct __struct5’ has no member named ‘i_class’
  115 |   decltype(std::declval<__struct5>().i_class) key;
      |                                      ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:115:38: error: ‘struct __struct5’ has no member named ‘i_class’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:119:48: error: expected identifier before ‘;’ token
  119 |   decltype(std::declval<__struct8>().key) class;
      |                                                ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:119:3: error: multiple types in one declaration
  119 |   decltype(std::declval<__struct8>().key) class;
      |   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:119:48: error: declaration does not declare anything [-fpermissive]
  119 |   decltype(std::declval<__struct8>().key) class;
      |                                                ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:123:38: error: ‘struct __struct5’ has no member named ‘i_item_id’
  123 |   decltype(std::declval<__struct5>().i_item_id) i_item_id;
      |                                      ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:123:38: error: ‘struct __struct5’ has no member named ‘i_item_id’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:124:38: error: ‘struct __struct5’ has no member named ‘i_item_desc’
  124 |   decltype(std::declval<__struct5>().i_item_desc) i_item_desc;
      |                                      ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:124:38: error: ‘struct __struct5’ has no member named ‘i_item_desc’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:125:38: error: ‘struct __struct5’ has no member named ‘i_category’
  125 |   decltype(std::declval<__struct5>().i_category) i_category;
      |                                      ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:125:38: error: ‘struct __struct5’ has no member named ‘i_category’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:126:38: error: ‘struct __struct5’ has no member named ‘i_class’
  126 |   decltype(std::declval<__struct5>().i_class) i_class;
      |                                      ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:126:38: error: ‘struct __struct5’ has no member named ‘i_class’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:127:38: error: ‘struct __struct5’ has no member named ‘i_current_price’
  127 |   decltype(std::declval<__struct5>().i_current_price) i_current_price;
      |                                      ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:127:38: error: ‘struct __struct5’ has no member named ‘i_current_price’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:128:38: error: ‘struct __struct5’ has no member named ‘itemrevenue’
  128 |   decltype(std::declval<__struct5>().itemrevenue) itemrevenue;
      |                                      ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:128:38: error: ‘struct __struct5’ has no member named ‘itemrevenue’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:129:41: error: ‘struct __struct5’ has no member named ‘itemrevenue’
  129 |   decltype((((std::declval<__struct5>().itemrevenue * 100)) /
      |                                         ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:130:39: error: ‘struct __struct5’ has no member named ‘total’
  130 |             std::declval<__struct5>().total)) revenueratio;
      |                                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:129:41: error: ‘struct __struct5’ has no member named ‘itemrevenue’
  129 |   decltype((((std::declval<__struct5>().itemrevenue * 100)) /
      |                                         ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:130:39: error: ‘struct __struct5’ has no member named ‘total’
  130 |             std::declval<__struct5>().total)) revenueratio;
      |                                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In function ‘void __json(const ClassTotal&)’:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:209:12: error: expected unqualified-id before ‘class’
  209 |   __json(v.class);
      |            ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: At global scope:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:217:13: error: redefinition of ‘void __json(const DateDim&)’
  217 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:132:13: note: ‘void __json(const DateDim&)’ previously defined here
  132 | inline void __json(const DateDim &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:307:13: error: redefinition of ‘void __json(const Item&)’
  307 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:147:13: note: ‘void __json(const Item&)’ previously defined here
  147 | inline void __json(const Item &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In function ‘void __json(const Filtered&)’:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:364:12: error: expected unqualified-id before ‘class’
  364 |   __json(v.class);
      |            ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: At global scope:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:392:13: error: redefinition of ‘void __json(const WebSale&)’
  392 | inline void __json(const WebSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:182:13: note: ‘void __json(const WebSale&)’ previously defined here
  182 | inline void __json(const WebSale &v) {
      |             ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:449:61: error: too many initializers for ‘Filtered’
  449 |                                 i.i_class, i.i_current_price};
      |                                                             ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:453:45: error: cannot convert ‘WebSale’ to ‘int’ in initialization
  453 |               __g.items.push_back(__struct5{ws, i, d});
      |                                             ^~
      |                                             |
      |                                             WebSale
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:460:67: error: cannot convert ‘WebSale’ to ‘int’ in initialization
  460 |                 __struct6{__key, std::vector<__struct5>{__struct5{ws, i, d}}});
      |                                                                   ^~
      |                                                                   |
      |                                                                   WebSale
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:460:76: error: no matching function for call to ‘std::vector<__struct5>::vector(<brace-enclosed initializer list>)’
  460 |                 __struct6{__key, std::vector<__struct5>{__struct5{ws, i, d}}});
      |                                                                            ^
In file included from /usr/include/c++/13/vector:66,
                 from /tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:9:
/usr/include/c++/13/bits/stl_vector.h:707:9: note: candidate: ‘template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&) [with <template-parameter-2-2> = _InputIterator; _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  707 |         vector(_InputIterator __first, _InputIterator __last,
      |         ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:707:9: note:   template argument deduction/substitution failed:
/usr/include/c++/13/bits/stl_vector.h:678:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  678 |       vector(initializer_list<value_type> __l,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:678:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:659:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  659 |       vector(vector&& __rv, const __type_identity_t<allocator_type>& __m)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:659:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:640:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::false_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::false_type = std::integral_constant<bool, false>]’
  640 |       vector(vector&& __rv, const allocator_type& __m, false_type)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:640:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:635:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&, std::true_type) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>; std::true_type = std::integral_constant<bool, true>]’
  635 |       vector(vector&& __rv, const allocator_type& __m, true_type) noexcept
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:635:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:624:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, std::__type_identity_t<_Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; std::__type_identity_t<_Alloc> = std::allocator<__struct5>]’
  624 |       vector(const vector& __x, const __type_identity_t<allocator_type>& __a)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:624:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:620:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  620 |       vector(vector&&) noexcept = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:620:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:601:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  601 |       vector(const vector& __x)
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:601:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:569:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const value_type&, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; value_type = std::vector<__struct5>::value_type; allocator_type = std::allocator<__struct5>]’
  569 |       vector(size_type __n, const value_type& __value,
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:569:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/13/bits/stl_vector.h:556:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(size_type, const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; size_type = long unsigned int; allocator_type = std::allocator<__struct5>]’
  556 |       vector(size_type __n, const allocator_type& __a = allocator_type())
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:556:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:542:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = __struct5; _Alloc = std::allocator<__struct5>; allocator_type = std::allocator<__struct5>]’
  542 |       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:542:7: note:   conversion of argument 1 would be ill-formed:
/usr/include/c++/13/bits/stl_vector.h:531:7: note: candidate: ‘std::vector<_Tp, _Alloc>::vector() [with _Tp = __struct5; _Alloc = std::allocator<__struct5>]’
  531 |       vector() = default;
      |       ^~~~~~
/usr/include/c++/13/bits/stl_vector.h:531:7: note:   candidate expects 0 arguments, 1 provided
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:467:34: error: expected primary-expression before ‘{’ token
  467 |       __items.push_back(__struct7{
      |                                  ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:481:5: error: conversion from ‘vector<__struct7>’ to non-scalar type ‘vector<__struct5>’ requested
  425 |   std::vector<__struct5> filtered = ([&]() {
      |                                     ~~~~~~~~
  426 |     std::vector<__struct6> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  427 |     for (auto ws : web_sales) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~
  428 |       for (auto i : item) {
      |       ~~~~~~~~~~~~~~~~~~~~~
  429 |         if (!((ws.ws_item_sk == i.i_item_sk)))
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  430 |           continue;
      |           ~~~~~~~~~
  431 |         for (auto d : date_dim) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~
  432 |           if (!((ws.ws_sold_date_sk == d.d_date_sk)))
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  433 |             continue;
      |             ~~~~~~~~~
  434 |           if (!((((std::find(
      |           ~~~~~~~~~~~~~~~~~~~
  435 |                        std::vector<std::string>{
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~
  436 |                            std::string("A"), std::string("B"), std::string("C")}
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  437 |                            .begin(),
      |                            ~~~~~~~~~
  438 |                        std::vector<std::string>{
      |                        ~~~~~~~~~~~~~~~~~~~~~~~~~
  439 |                            std::string("A"), std::string("B"), std::string("C")}
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  440 |                            .end(),
      |                            ~~~~~~~
  441 |                        i.i_category) !=
      |                        ~~~~~~~~~~~~~~~~
  442 |                    std::vector<std::string>{std::string("A"), std::string("B"),
      |                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  443 |                                             std::string("C")}
      |                                             ~~~~~~~~~~~~~~~~~
  444 |                        .end()) &&
      |                        ~~~~~~~~~~
  445 |                   (d.d_date >= std::string("2001-01-15"))) &&
      |                   ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  446 |                  (d.d_date <= std::string("2001-02-14")))))
      |                  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  447 |             continue;
      |             ~~~~~~~~~
  448 |           auto __key = Filtered{i.i_item_id, i.i_item_desc, i.i_category,
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  449 |                                 i.i_class, i.i_current_price};
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  450 |           bool __found = false;
      |           ~~~~~~~~~~~~~~~~~~~~~
  451 |           for (auto &__g : __groups) {
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  452 |             if (__g.key == __key) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~
  453 |               __g.items.push_back(__struct5{ws, i, d});
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  454 |               __found = true;
      |               ~~~~~~~~~~~~~~~
  455 |               break;
      |               ~~~~~~
  456 |             }
      |             ~
  457 |           }
      |           ~
  458 |           if (!__found) {
      |           ~~~~~~~~~~~~~~~
  459 |             __groups.push_back(
      |             ~~~~~~~~~~~~~~~~~~~
  460 |                 __struct6{__key, std::vector<__struct5>{__struct5{ws, i, d}}});
      |                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  461 |           }
      |           ~
  462 |         }
      |         ~
  463 |       }
      |       ~
  464 |     }
      |     ~
  465 |     std::vector<__struct7> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  466 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  467 |       __items.push_back(__struct7{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  468 |           g.key.id, g.key.desc, g.key.cat, g.key.class, g.key.price,
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  469 |           ([&](auto v) {
      |           ~~~~~~~~~~~~~~
  470 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  471 |           })(([&]() {
      |           ~~~~~~~~~~~
  472 |             std::vector<decltype(std::declval<__struct5>().ws_ext_sales_price)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  473 |                 __items;
      |                 ~~~~~~~~
  474 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  475 |               __items.push_back(x.ws_ext_sales_price);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  476 |             }
      |             ~
  477 |             return __items;
      |             ~~~~~~~~~~~~~~~
  478 |           })())});
      |           ~~~~~~~~
  479 |     }
      |     ~
  480 |     return __items;
      |     ~~~~~~~~~~~~~~~
  481 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:485:22: error: ‘struct __struct5’ has no member named ‘i_class’
  485 |       auto __key = f.i_class;
      |                      ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:505:60: error: ‘struct __struct5’ has no member named ‘itemrevenue’
  505 |             std::vector<decltype(std::declval<__struct5>().itemrevenue)>
      |                                                            ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:505:60: error: ‘struct __struct5’ has no member named ‘itemrevenue’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:505:72: error: template argument 1 is invalid
  505 |             std::vector<decltype(std::declval<__struct5>().itemrevenue)>
      |                                                                        ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:505:72: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:508:23: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  508 |               __items.push_back(x.itemrevenue);
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:508:35: error: ‘struct __struct5’ has no member named ‘itemrevenue’
  508 |               __items.push_back(x.itemrevenue);
      |                                   ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In instantiation of ‘main()::<lambda()>::<lambda(auto:1)> [with auto:1 = int]’:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:504:13:   required from here
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:503:38: error: request for member ‘begin’ in ‘v’, which is of non-class type ‘int’
  503 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                    ~~^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:503:49: error: request for member ‘end’ in ‘v’, which is of non-class type ‘int’
  503 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |                                               ~~^~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:511:16: error: too many initializers for ‘ClassTotal’
  511 |           })())});
      |                ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In function ‘int main()’:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:514:5: error: conversion from ‘vector<ClassTotal>’ to non-scalar type ‘vector<__struct5>’ requested
  482 |   std::vector<__struct5> class_totals = ([&]() {
      |                                         ~~~~~~~~
  483 |     std::vector<__struct8> __groups;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  484 |     for (auto f : filtered) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~
  485 |       auto __key = f.i_class;
      |       ~~~~~~~~~~~~~~~~~~~~~~~
  486 |       bool __found = false;
      |       ~~~~~~~~~~~~~~~~~~~~~
  487 |       for (auto &__g : __groups) {
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  488 |         if (__g.key == __key) {
      |         ~~~~~~~~~~~~~~~~~~~~~~~
  489 |           __g.items.push_back(__struct5{f});
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  490 |           __found = true;
      |           ~~~~~~~~~~~~~~~
  491 |           break;
      |           ~~~~~~
  492 |         }
      |         ~
  493 |       }
      |       ~
  494 |       if (!__found) {
      |       ~~~~~~~~~~~~~~~
  495 |         __groups.push_back(
      |         ~~~~~~~~~~~~~~~~~~~
  496 |             __struct8{__key, std::vector<__struct5>{__struct5{f}}});
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  497 |       }
      |       ~
  498 |     }
      |     ~
  499 |     std::vector<ClassTotal> __items;
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  500 |     for (auto &g : __groups) {
      |     ~~~~~~~~~~~~~~~~~~~~~~~~~~
  501 |       __items.push_back(ClassTotal{
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  502 |           g.key, ([&](auto v) {
      |           ~~~~~~~~~~~~~~~~~~~~~
  503 |             return std::accumulate(v.begin(), v.end(), 0.0);
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  504 |           })(([&]() {
      |           ~~~~~~~~~~~
  505 |             std::vector<decltype(std::declval<__struct5>().itemrevenue)>
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  506 |                 __items;
      |                 ~~~~~~~~
  507 |             for (auto x : g.items) {
      |             ~~~~~~~~~~~~~~~~~~~~~~~~
  508 |               __items.push_back(x.itemrevenue);
      |               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  509 |             }
      |             ~
  510 |             return __items;
      |             ~~~~~~~~~~~~~~~
  511 |           })())});
      |           ~~~~~~~~
  512 |     }
      |     ~
  513 |     return __items;
      |     ~~~~~~~~~~~~~~~
  514 |   })();
      |   ~~^~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp: In lambda function:
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:517:54: error: ‘struct __struct5’ has no member named ‘i_category’
  517 |         std::pair<decltype(std::declval<__struct5>().i_category), Result>>
      |                                                      ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:517:54: error: ‘struct __struct5’ has no member named ‘i_category’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:517:67: error: template argument 1 is invalid
  517 |         std::pair<decltype(std::declval<__struct5>().i_category), Result>>
      |                                                                   ^~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:517:73: error: template argument 1 is invalid
  517 |         std::pair<decltype(std::declval<__struct5>().i_category), Result>>
      |                                                                         ^~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:517:73: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:521:18: error: ‘struct __struct5’ has no member named ‘i_class’
  521 |         if (!((f.i_class == t.class)))
      |                  ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:521:31: error: expected unqualified-id before ‘class’
  521 |         if (!((f.i_class == t.class)))
      |                               ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:521:31: error: expected ‘)’ before ‘class’
  521 |         if (!((f.i_class == t.class)))
      |               ~               ^~~~~
      |                               )
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:522:19: error: expected ‘)’ before ‘;’ token
  522 |           continue;
      |                   ^
      |                   )
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:521:14: note: to match this ‘(’
  521 |         if (!((f.i_class == t.class)))
      |              ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:522:19: error: expected ‘)’ before ‘;’ token
  522 |           continue;
      |                   ^
      |                   )
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:521:12: note: to match this ‘(’
  521 |         if (!((f.i_class == t.class)))
      |            ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:523:17: error: request for member ‘push_back’ in ‘__items’, which is of non-class type ‘int’
  523 |         __items.push_back(
      |                 ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:524:37: error: ‘struct __struct5’ has no member named ‘i_category’
  524 |             {std::vector<decltype(f.i_category)>{f.i_category, f.i_class,
      |                                     ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:524:37: error: ‘struct __struct5’ has no member named ‘i_category’
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:524:48: error: template argument 1 is invalid
  524 |             {std::vector<decltype(f.i_category)>{f.i_category, f.i_class,
      |                                                ^
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:524:48: error: template argument 2 is invalid
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:524:52: error: ‘struct __struct5’ has no member named ‘i_category’
  524 |             {std::vector<decltype(f.i_category)>{f.i_category, f.i_class,
      |                                                    ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:524:66: error: ‘struct __struct5’ has no member named ‘i_class’
  524 |             {std::vector<decltype(f.i_category)>{f.i_category, f.i_class,
      |                                                                  ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:525:52: error: ‘struct __struct5’ has no member named ‘i_item_id’
  525 |                                                  f.i_item_id, f.i_item_desc},
      |                                                    ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:525:65: error: ‘struct __struct5’ has no member named ‘i_item_desc’
  525 |                                                  f.i_item_id, f.i_item_desc},
      |                                                                 ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:526:23: error: ‘struct __struct5’ has no member named ‘i_item_id’
  526 |              Result{f.i_item_id, f.i_item_desc, f.i_category, f.i_class,
      |                       ^~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:526:36: error: ‘struct __struct5’ has no member named ‘i_item_desc’
  526 |              Result{f.i_item_id, f.i_item_desc, f.i_category, f.i_class,
      |                                    ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:526:51: error: ‘struct __struct5’ has no member named ‘i_category’
  526 |              Result{f.i_item_id, f.i_item_desc, f.i_category, f.i_class,
      |                                                   ^~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:526:65: error: ‘struct __struct5’ has no member named ‘i_class’
  526 |              Result{f.i_item_id, f.i_item_desc, f.i_category, f.i_class,
      |                                                                 ^~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:527:23: error: ‘struct __struct5’ has no member named ‘i_current_price’
  527 |                     f.i_current_price, f.itemrevenue,
      |                       ^~~~~~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:527:42: error: ‘struct __struct5’ has no member named ‘itemrevenue’
  527 |                     f.i_current_price, f.itemrevenue,
      |                                          ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:528:26: error: ‘struct __struct5’ has no member named ‘itemrevenue’
  528 |                     (((f.itemrevenue * 100)) / t.total)}});
      |                          ^~~~~~~~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:528:50: error: ‘struct __struct5’ has no member named ‘total’
  528 |                     (((f.itemrevenue * 100)) / t.total)}});
      |                                                  ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:531:23: error: request for member ‘begin’ in ‘__items’, which is of non-class type ‘int’
  531 |     std::sort(__items.begin(), __items.end(),
      |                       ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:531:40: error: request for member ‘end’ in ‘__items’, which is of non-class type ‘int’
  531 |     std::sort(__items.begin(), __items.end(),
      |                                        ^~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:534:20: error: ‘begin’ was not declared in this scope; did you mean ‘std::begin’?
  534 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::begin
In file included from /usr/include/c++/13/string:53,
                 from /usr/include/c++/13/bits/locale_classes.h:40,
                 from /usr/include/c++/13/bits/ios_base.h:41,
                 from /usr/include/c++/13/ios:44,
                 from /usr/include/c++/13/ostream:40,
                 from /usr/include/c++/13/iostream:41:
/usr/include/c++/13/bits/range_access.h:114:37: note: ‘std::begin’ declared here
  114 |   template<typename _Tp> const _Tp* begin(const valarray<_Tp>&) noexcept;
      |                                     ^~~~~
/tmp/TestCPPCompiler_TPCDSQueriesq121431971664/001/prog.cpp:534:20: error: ‘end’ was not declared in this scope; did you mean ‘std::end’?
  534 |     for (auto &p : __items)
      |                    ^~~~~~~
      |                    std::end
/usr/include/c++/13/bits/range_access.h:116:37: note: ‘std::end’ declared here
  116 |   template<typename _Tp> const _Tp* end(const valarray<_Tp>&) noexcept;
      |                                     ^~~
